@@ -221,13 +221,13 @@ Decrease font size. \fBNote:\fP This may require you to press shift, depending o
 .B Ctrl+Zero (0)
 Restore font size to original setting.
 .TP
-.B Ctrl+W
+.B Ctrl+Alt+W
 Rename window title.
 .TP
-.B Ctrl+A
+.B Ctrl+Alt+A
 Rename tab title.
 .TP
-.B Ctrl+X
+.B Ctrl+Alt+X
 Rename terminal title.
 .TP
 .B Super+1
