@@ -191,9 +191,9 @@ DEFAULTS = {
             'broadcast_all'    : '<Alt>a',
             'insert_number'    : '<Super>1',
             'insert_padded'    : '<Super>0',
-            'edit_window_title': '<Control>w',
-            'edit_tab_title'   : '<Control>a',
-            'edit_terminal_title': '<Control>x',
+            'edit_window_title': '<Control><Alt>w',
+            'edit_tab_title'   : '<Control><Alt>a',
+            'edit_terminal_title': '<Control><Alt>x',
             'layout_launcher'  : '<Alt>l',
             'next_profile'     : '',
             'previous_profile' : '', 
